--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
         <h1>{{titolo}}</h1>
 
+        <ul>
+            <li v-for="email in emails">{{email}}</li>
+        </ul>
+
     </div>
 
 
