--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     <div id="app">
 
         <h1>{{titolo}}</h1>
-
-        <ul>
-            <li v-for="email in emails">{{email}}</li>
-        </ul>
+        <div v-if="emails.length >= 10">
+            <ol>
+                <li v-for="email in emails">{{email}}</li>
+            </ol>
+        </div>
+        <div v-else>
+            <p>Caricamente Email</p>
+        </div>
 
     </div>
 
