--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 <body>
 
     <div id="app">
-
-        <h1>{{titolo}}</h1>
-        <div v-if="emails.length >= 10">
-            <ol>
-                <li v-for="email in emails">{{email}}</li>
-            </ol>
-        </div>
-        <div v-else>
-            <p>Caricamente Email</p>
+        <div class="container">
+            <h1>{{titolo}}</h1>
+            <div v-if="emails.length >= 10">
+                <ol>
+                    <li v-for="email in emails">{{email}}</li>
+                </ol>
+            </div>
+            <div v-else class="load">
+                <p>Caricamente Email</p>
+            </div>
         </div>
 
     </div>
