--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <div id="app">
         <div class="container">
             <h1>{{titolo}}</h1>
-            <div v-if="emails.length >= 10">
+            <div v-if="emails.length >= 20">
                 <ol>
                     <li v-for="email in emails">{{email}}</li>
                 </ol>
             </div>
             <div v-else class="load">
                 <p>Caricamente Email</p>
+                <div class="loader"></div>
             </div>
         </div>
 
